add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" href="style.css">
     <title>Welcome to My Website! </title>
   </head>
   <body>
-    <h1>Hello all! My name is Ro!</h1>
+    <div class="wrapper">
+        <!-- HEADER -->
+        <h1>Welcome</h1>
+        <!-- SUB HEAD -->
+        <h2>My name is Ro. I'm a caffine addict that likes to test her limits!</h2>
   </body>
 </html> 
